refactor: clean up some publish workflow steps
Add TODO comment for Tsitu's tool update, as it should really be something we can also run locally, e.g. a bash or node script in a new folder.

A transpiling workflow would have us writing the to-be-released code into `dist/`

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,29 +10,31 @@ jobs:
   CD:
     runs-on: ubuntu-latest
     steps:
-      - name: Show who executed this
+      - name: Authorized by
         run: echo "${{ github.event.sender.login }}"
 
-      - name: Check out repository code
-        uses: actions/checkout@v2
+      - uses: actions/checkout@v2
         with:
           fetch-depth: '0'
 
       - name: Pull in latest Tsitus tools
+        # TODO: Make this runnable via `npm run update-tsitu-tools` by writing a utility script
+        # (It can then also be leveraged by `npm run build` for assembling the complete extension)
+        env:
+          tsitu_cdn: https://cdn.jsdelivr.net/gh/tsitu/MH-Tools@master/src/bookmarklet
+          curl_opts: -sSf -O -J
         run: |
-          cd ${{ github.workspace }}/src/
-          mkdir -p third_party/tsitu
-          cd third_party/tsitu
-          curl -O -J https://cdn.jsdelivr.net/gh/tsitu/MH-Tools@master/src/bookmarklet/bm-analyzer.min.js
-          curl -O -J https://cdn.jsdelivr.net/gh/tsitu/MH-Tools@master/src/bookmarklet/bm-crafting.min.js
-          curl -O -J https://cdn.jsdelivr.net/gh/tsitu/MH-Tools@master/src/bookmarklet/bm-cre.min.js
-          curl -O -J https://cdn.jsdelivr.net/gh/tsitu/MH-Tools@master/src/bookmarklet/bm-crown.min.js
-          curl -O -J https://cdn.jsdelivr.net/gh/tsitu/MH-Tools@master/src/bookmarklet/bm-map.min.js
-          curl -O -J https://cdn.jsdelivr.net/gh/tsitu/MH-Tools@master/src/bookmarklet/bm-menu.min.js
-          curl -O -J https://cdn.jsdelivr.net/gh/tsitu/MH-Tools@master/src/bookmarklet/bm-powers.min.js
-          curl -O -J https://cdn.jsdelivr.net/gh/tsitu/MH-Tools@master/src/bookmarklet/bm-setup-fields.min.js
-          curl -O -J https://cdn.jsdelivr.net/gh/tsitu/MH-Tools@master/src/bookmarklet/bm-setup-items.min.js
-          ls -la
+          mkdir -p ${{ github.workspace }}/src/third_party/tsitu
+          cd ${{ github.workspace }}/src/third_party/tsitu
+          curl ${{ env.curl_opts }} ${{ env.tsitu_cdn }}/bm-analyzer.min.js
+          curl ${{ env.curl_opts }} ${{ env.tsitu_cdn }}/bm-crafting.min.js
+          curl ${{ env.curl_opts }} ${{ env.tsitu_cdn }}/bm-cre.min.js
+          curl ${{ env.curl_opts }} ${{ env.tsitu_cdn }}/bm-crown.min.js
+          curl ${{ env.curl_opts }} ${{ env.tsitu_cdn }}/bm-map.min.js
+          curl ${{ env.curl_opts }} ${{ env.tsitu_cdn }}/bm-menu.min.js
+          curl ${{ env.curl_opts }} ${{ env.tsitu_cdn }}/bm-powers.min.js
+          curl ${{ env.curl_opts }} ${{ env.tsitu_cdn }}/bm-setup-fields.min.js
+          curl ${{ env.curl_opts }} ${{ env.tsitu_cdn }}/bm-setup-items.min.js
 
       - name: Check if there are changes
         id: changes
@@ -47,12 +49,12 @@ jobs:
           git commit -m "Automated tsitus tools update"
           git push
 
-      - name: Bump version automatically if no custom
+      - name: Auto-versioning
         if: ${{ github.event.inputs.NEW_CUSTOM_VERSION == '' }}
         run: |
           echo "NEW_CREATED_VERSION=$(git describe --tags `git rev-list --tags --max-count=1` | awk -F. '{$NF = $NF + 1;} 1' | sed 's/ /./g' | sed 's/v//')" >> $GITHUB_ENV
 
-      - name: Bump version to custom if set
+      - name: Use custom version
         if: ${{ github.event.inputs.NEW_CUSTOM_VERSION != '' }}
         run: |
           echo "NEW_CREATED_VERSION=${{ github.event.inputs.NEW_CUSTOM_VERSION }}" >> $GITHUB_ENV
@@ -62,21 +64,16 @@ jobs:
           git tag ${{ env.NEW_CREATED_VERSION }}
           git push --tags
 
-      - name: Update version
+      - name: Update manifest
         run: |
-          cd ${{ github.workspace }}/src/
           echo "New Version: ${{ env.NEW_CREATED_VERSION }}"
-          sed -i'' -e 's|"version":.*|"version": "${{ env.NEW_CREATED_VERSION }}",|' manifest.json
-          cat manifest.json
+          sed -i'' -e 's|"version":.*|"version": "${{ env.NEW_CREATED_VERSION }}",|' src/manifest.json
+          cat src/manifest.json
 
       - name: Zip it! zip it good!
         run: |
-          cd ${{ github.workspace }}/src/
-          mkdir ../build
-          zip -r ../build/release.zip .
-          pwd
-          ls -la ../build/release.zip
-          cd ../
+          mkdir build
+          zip -r ./build/release.zip ./src
 
       - name: Upload new release zip to Chrome Webstore
         uses: Klemensas/chrome-extension-upload-action@1df3cdf4047a4789bc61a64a125994d8caf23572
@@ -89,9 +86,7 @@ jobs:
           publish: true
 
       - name: Rename zip to xpi
-        run: |
-          mv build/release.zip build/release.xpi
-          ls -la build/release.xpi
+        run: mv build/release.zip build/release.xpi
 
       - name: Upload new release xpi to Firefox Webstore
         uses: trmcnvn/firefox-addon@b2d90798a21626e1f4f25ffa279ba2e7199bb4cc
