--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -89,26 +89,28 @@ jobs:
           body: ${{ steps.create_release_notes.outputs.changelog }}
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      # - name: Upload new release zip to Chrome Webstore
-      #   uses: Klemensas/chrome-extension-upload-action@1df3cdf4047a4789bc61a64a125994d8caf23572
-      #   with:
-      #     refresh-token: ${{ secrets.CHROME_WEBSTORE_REFRESH_TOKEN }}
-      #     client-id: ${{ secrets.CHROME_WEBSTORE_CLIENT_ID }}
-      #     client-secret: ${{ secrets.CHROME_WEBSTORE_CLIENT_SECRET }}
-      #     file-name: './build/release.zip'
-      #     app-id: 'ghfmjkamilolkalibpmokjigalmncfek'
-      #     publish: true
+      - name: Upload new release zip to Chrome Webstore
+        uses: Klemensas/chrome-extension-upload-action@1df3cdf4047a4789bc61a64a125994d8caf23572
+        with:
+          refresh-token: ${{ secrets.CHROME_WEBSTORE_REFRESH_TOKEN }}
+          client-id: ${{ secrets.CHROME_WEBSTORE_CLIENT_ID }}
+          client-secret: ${{ secrets.CHROME_WEBSTORE_CLIENT_SECRET }}
+          file-name: ${{ steps.create-zip.outputs.artifact-path }}
+          app-id: 'ghfmjkamilolkalibpmokjigalmncfek'
+          publish: true
 
-      # - name: Rename zip to xpi
-      #   run: mv build/release.zip build/release.xpi
+      - name: Rename zip to xpi
+        run: |
+          mv ${{ steps.create-zip.outputs.artifact-path }} build/release.xpi
+          echo "::set-output name=artifact-path-xpi::build/release-${{ steps.create-tag.outputs.version-tag }}.xpi"
 
-      # - name: Upload new release xpi to Firefox Webstore
-      #   uses: trmcnvn/firefox-addon@b2d90798a21626e1f4f25ffa279ba2e7199bb4cc
-      #   with:
-      #     uuid: '{801e5516-3311-4ee7-8185-7da12ffab807}'
-      #     xpi: ./build/release.xpi
-      #     manifest: ./src/manifest.json
-      #     api-key: ${{ secrets.FIREFOX_WEBSTORE_API_KEY }}
-      #     api-secret: ${{ secrets.FIREFOX_WEBSTORE_API_SECRET }}
-      #   env:
-      #     VERSION: ${{ env.NEW_CREATED_VERSION }}
+      - name: Upload new release xpi to Firefox Webstore
+        uses: trmcnvn/firefox-addon@b2d90798a21626e1f4f25ffa279ba2e7199bb4cc
+        with:
+          uuid: '{801e5516-3311-4ee7-8185-7da12ffab807}'
+          xpi: ${{ steps.create-zip.outputs.artifact-path-xpi }}
+          manifest: ./src/manifest.json
+          api-key: ${{ secrets.FIREFOX_WEBSTORE_API_KEY }}
+          api-secret: ${{ secrets.FIREFOX_WEBSTORE_API_SECRET }}
+        env:
+          VERSION: ${{ steps.create-tag.outputs.version-tag }}
