--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -59,18 +59,18 @@ jobs:
           sed -i'' -e 's|"version":.*|"version": "${{ steps.create-tag.outputs.version-tag }}",|' src/manifest.json
           cat src/manifest.json
 
+      - uses: actions/upload-artifact@v2
+        with:
+          name: release-${{ steps.create-tag.outputs.version-tag }}
+          path: ./src/*
+
       - name: Zip it! zip it good!
         id: create-zip
         run: |
           mkdir build
-          zip -r ./build/release-${{ steps.create-tag.outputs.version-tag }}.zip ./src
+          zip -r ./build/release-${{ steps.create-tag.outputs.version-tag }}.zip ./src/*
           echo "::set-output name=artifact-name::release-${{ steps.create-tag.outputs.version-tag }}.zip"
           echo "::set-output name=artifact-path::build/release-${{ steps.create-tag.outputs.version-tag }}.zip"
-
-      - uses: actions/upload-artifact@v2
-        with:
-          name: ${{ steps.create-zip.outputs.artifact-name }}
-          path: ${{ steps.create-zip.outputs.artifact-path }}
 
       - name: Create release notes
         id: create_release_notes
