--- a/package.json
+++ b/package.json
@@ -42,6 +42,6 @@
     "url": "git+https://github.com/mh-community-tools/mh-helper-extension.git"
   },
   "devDependencies": {
-    "eslint": "~7.32.0"
+    "eslint": "^8.1.0"
   }
 }
