--- a/src/manifest.json
+++ b/src/manifest.json
@@ -41,5 +41,12 @@
     "options_ui": {
         "page": "options.html",
         "chrome_style": true
+    },
+    "browser_specific_settings": {
+        "gecko": {
+            "id": "addon@example.com",
+        "strict_min_version": "42.0"
     }
+}
+
 }
