--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "dev": "npm run build:dev && concurrently \"npm run web-run\" \"npm run build:watch\"",
     "dev:firefox": "npm run build:dev && concurrently \"npm run web-run:firefox\" \"npm run build:watch\"",
     "lint": "eslint src",
-    "test": "echo 'Nothing to see here, move along'"
+    "test": "jest"
   },
   "private": true,
   "repository": {
@@ -50,10 +50,13 @@
     "url": "git+https://github.com/mh-community-tools/mh-helper-extension.git"
   },
   "devDependencies": {
+    "@types/jest": "^29.1.2",
     "concurrently": "^7.4.0",
     "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.25.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
+    "jest": "^29.1.2",
+    "ts-jest": "^29.0.3",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
     "web-ext": "^7.2.0",
