--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,9 @@
 {
   "compilerOptions": {
-      "baseUrl": ".",
+      "baseUrl": "./",
       "target": "es6",
       "module": "commonjs",
       "moduleResolution": "node",
-      "rootDir": "./src",
       "outDir": "dist/scripts",
       "strict": true,
       "sourceMap": true,
@@ -20,7 +19,6 @@
       "strictNullChecks": true,
       "allowJs": true,
   },
-  "include": [
-    "src/**/*"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist"]
 }
