Fix publish workflow 'upload-artifact' step
The publish artifact step should point to the new `./dist` folder, not
the `./src folder.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -76,7 +76,7 @@ jobs:
       - uses: actions/upload-artifact@v2
         with:
           name: release-${{ steps.create-tag.outputs.version-tag }}
-          path: ./src/*
+          path: ./dist/*
 
       - name: Zip it! zip it good!
         id: create-zip
