--- a/src/manifest.json
+++ b/src/manifest.json
@@ -31,6 +31,7 @@
     "web_accessible_resources": [
         "scripts/main.js",
         "third_party/tsitu/*",
+        "third_party/forge/*",
         "images/icon128.png"
     ],
 
