--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -44,6 +44,14 @@ jobs:
           curl ${{ env.curl_opts }} ${{ env.tsitu_cdn }}/bm-setup-fields.min.js
           curl ${{ env.curl_opts }} ${{ env.tsitu_cdn }}/bm-setup-items.min.js
 
+      - name: Pull in latest Forge
+      # https://github.com/digitalbazaar/forge
+      # TODO: Make this using `npm run update forge`
+        run:
+          mkdir -p ${{ github.workspace }}/dist/third_party/forge
+          cd ${{ github.workspace }}/dist/third_party/forge
+          curl -sSf -O -J https://cdn.jsdelivr.net/npm/node-forge@1/dist/forge.min.js
+
       - name: Auto-versioning
         if: ${{ github.event.inputs.NEW_CUSTOM_VERSION == '' }}
         run: |
