--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "eslint": "^8.28.0",
     "fork-ts-checker-webpack-plugin": "^7.2.13",
     "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "ts-jest": "^29.0.3",
     "ts-loader": "^9.4.1",
     "typescript": "^4.9.3",
