--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "fork-ts-checker-webpack-plugin": "^7.2.13",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
+    "save-remote-file-webpack-plugin": "^1.1.0",
     "ts-jest": "^29.0.3",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.4",
