--- a/.github/workflows/testing-release-notes.yml
+++ b/.github/workflows/testing-release-notes.yml
@@ -1,31 +1,27 @@
-# This is a basic workflow that is manually triggered
-
 name: Release Notes Test
 
 on:
   workflow_dispatch:
 
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "greet"
   test:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-    
-      - name: Create release notes
-        id: create_release_notes
+      - name: Build Changelog
+        id: github_release
         uses: mikepenz/release-changelog-builder-action@v3
-        with:
-          commitMode: true
-          failOnError: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    
-      # Runs a single command using the runners shell
-      - name: Send greeting
-        run: echo "Hello ${{ steps.create_release_notes.outputs.changelog }}"
-      
+
+#       - name: Create release notes
+#         id: create_release_notes
+#         uses: mikepenz/release-changelog-builder-action@v3
+#         with:
+#           commitMode: true
+#           failOnError: true
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Display notes
+        run: echo "Release Notes ${{steps.github_release.outputs.changelog}}"
