--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     {
       "name": "tsitu",
       "url": "https://github.com/tsitu/"
+    },
+    {
+      "name": "hymccord",
+      "url": "https://github.com/hymccord/"
     }
   ],
   "bugs": {
@@ -36,9 +40,9 @@
     "web-run": "npm run web-run:chrome",
     "web-run:chrome": "cd dist && web-ext run --start-url https://www.mousehuntgame.com -t chromium",
     "web-run:firefox": "cd dist && web-ext run --start-url https://www.mousehuntgame.com",
-    "build": "webpack --config webpack/webpack.prod.js",
-    "build:dev": "webpack --config webpack/webpack.dev.js",
-    "build:watch": "webpack --config webpack/webpack.dev.js --watch",
+    "build": "node ./webpack/custom-downloader.js && webpack --config webpack/webpack.prod.js",
+    "build:dev": "node ./webpack/custom-downloader.js && webpack --config webpack/webpack.dev.js",
+    "build:watch": "node ./webpack/custom-downloader.js && webpack --config webpack/webpack.dev.js --watch",
     "dev": "npm run build:dev && concurrently \"npm run web-run\" \"npm run build:watch\"",
     "dev:firefox": "npm run build:dev && concurrently \"npm run web-run:firefox\" \"npm run build:watch\"",
     "lint": "eslint .",
@@ -59,7 +63,6 @@
     "fork-ts-checker-webpack-plugin": "^8.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
-    "save-remote-file-webpack-plugin": "^1.1.0",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
