--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
     "web-run": "npm run web-run:chrome",
     "web-run:chrome": "cd dist && web-ext run --start-url https://www.mousehuntgame.com -t chromium",
     "web-run:firefox": "cd dist && web-ext run --start-url https://www.mousehuntgame.com",
-    "build": "node ./webpack/custom-downloader.js && webpack --config webpack/webpack.prod.js",
-    "build:dev": "node ./webpack/custom-downloader.js && webpack --config webpack/webpack.dev.js",
-    "build:watch": "node ./webpack/custom-downloader.js && webpack --config webpack/webpack.dev.js --watch",
+    "build": "webpack --config webpack/webpack.prod.js",
+    "build:dev": "webpack --config webpack/webpack.dev.js",
+    "build:watch": "webpack --config webpack/webpack.dev.js --watch",
     "dev": "npm run build:dev && concurrently \"npm run web-run\" \"npm run build:watch\"",
     "dev:firefox": "npm run build:dev && concurrently \"npm run web-run:firefox\" \"npm run build:watch\"",
     "lint": "eslint .",
@@ -61,6 +61,7 @@
     "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.38.0",
     "fork-ts-checker-webpack-plugin": "^8.0.0",
+    "got-cjs": "^12.5.4",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "ts-jest": "^29.1.0",
