Update exemption tests to use stager

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
     "strictNullChecks": true,
     "allowJs": true,
     "paths": {
-      "@scripts/*":["./src/scripts/*"]
+      "@scripts/*":["./src/scripts/*"],
+      "@tests/*": ["./tests/*"]
     }
   },
   "include": ["src/**/*", "tests/**/*"]
