--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,17 +5,13 @@ on:
   push:
     branches:
       - main
-    paths:
-      - '*'
-      - '!*.md'
-      - '!*.txt'
-      - .github/workflows/**
+    paths-ignore:
+      - '**.md'
+      - '**.txt'
   pull_request:
-    paths:
-      - '*'
-      - '!*.md'
-      - '!*.txt'
-      - .github/workflows/**
+    paths-ignore:
+      - '**.md'
+      - '**.txt'
 
 jobs:
   web-ext-lint:
