--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -55,8 +55,6 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - setup
-    outputs:
-      artifact-path: ${{ steps.create-zip.outputs.artifact-path }}
     strategy:
       matrix:
         node-version: [18.x]
@@ -131,7 +129,7 @@ jobs:
       - name: Create chrome artifact
         run: |
           mkdir build
-          zip -r ./build/release-${{ env.EXT_VERSION }}.zip ./dist/*
+          zip -r chrome-extension.zip ./dist/*
 
       - name: Upload new release zip to Chrome Webstore
         uses: Klemensas/chrome-extension-upload-action@1df3cdf4047a4789bc61a64a125994d8caf23572
@@ -139,7 +137,7 @@ jobs:
           refresh-token: ${{ secrets.CHROME_WEBSTORE_REFRESH_TOKEN }}
           client-id: ${{ secrets.CHROME_WEBSTORE_CLIENT_ID }}
           client-secret: ${{ secrets.CHROME_WEBSTORE_CLIENT_SECRET }}
-          file-name: ${{ needs.CD.outputs.artifact-path }}
+          file-name: chrome-extension.zip
           app-id: ${{ secrets.CHROME_WEBSTORE_ADDON_ID }}
           publish: true
 
