--- a/src/manifest.json
+++ b/src/manifest.json
@@ -15,6 +15,8 @@
         "default_popup": "popup.html"
     },
 
+    "incognito": "split",
+
     "permissions": [
         "tabs",
         "*://www.mousehuntgame.com/*",
