--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "jest-environment-jsdom": "^29.6.4",
     "ts-jest": "^29.1.1",
     "ts-loader": "^9.4.4",
+    "tsconfig-paths-webpack-plugin": "^4.1.0",
     "typescript": "^5.2.2",
     "web-ext": "^7.7.0",
     "webpack": "^5.88.2",
