--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -53,71 +53,71 @@ jobs:
           echo "Setting extension version number to $EXT_VERSION_NUM"
           echo "ext-version-num=$EXT_VERSION_NUM" >> $GITHUB_OUTPUT
 
-  # create-zip:
-  #   runs-on: ubuntu-latest
-  #   needs:
-  #     - generate-version
-  #   strategy:
-  #     matrix:
-  #       node-version: [18.x]
-  #   env:
-  #     EXT_VERSION: ${{ needs.generate-version.outputs.ext-version }}
-  #   steps:
-  #     - name: Authorized by
-  #       run: echo "${{ github.event.sender.login }}"
+  create-zip:
+    runs-on: ubuntu-latest
+    needs:
+      - generate-version
+    strategy:
+      matrix:
+        node-version: [18.x]
+    env:
+      EXT_VERSION: ${{ needs.generate-version.outputs.ext-version }}
+    steps:
+      - name: Authorized by
+        run: echo "${{ github.event.sender.login }}"
 
-  #     - uses: actions/checkout@v3
-  #       with:
-  #         fetch-depth: '0'
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: '0'
 
-  #     - name: Set up Node
-  #       uses: actions/setup-node@v3
-  #       with:
-  #         node-version: ${{ matrix.node-version }}
-  #         cache: 'npm'
+      - name: Set up Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: 'npm'
 
-  #     - name: Update manifest
-  #       run: |
-  #         echo "New Version: ${{ env.EXT_VERSION }}"
-  #         sed -i'' -e 's|"version":.*|"version": "${{ env.EXT_VERSION }}",|' src/manifest.json
-  #         cat src/manifest.json
+      - name: Update manifest
+        run: |
+          echo "New Version: ${{ env.EXT_VERSION }}"
+          sed -i'' -e 's|"version":.*|"version": "${{ env.EXT_VERSION }}",|' src/manifest.json
+          cat src/manifest.json
 
-  #     - name: Install dependencies
-  #       run: npm ci
+      - name: Install dependencies
+        run: npm ci
 
-  #     - name: Build
-  #       run: npm run build
+      - name: Build
+        run: npm run build
 
-  #     - uses: actions/upload-artifact@v3
-  #       with:
-  #         name: release-${{ env.EXT_VERSION }}
-  #         path: ./dist/*
+      - uses: actions/upload-artifact@v3
+        with:
+          name: release-${{ env.EXT_VERSION }}
+          path: ./dist/*
 
-  #     - name: Zip it! zip it good!
-  #       id: create-zip
-  #       run: |
-  #         mkdir build
-  #         zip -r ./build/release-${{ env.EXT_VERSION }}.zip ./dist/*
+      - name: Zip it! zip it good!
+        id: create-zip
+        run: |
+          mkdir build
+          zip -r ./build/release-${{ env.EXT_VERSION }}.zip ./dist/*
 
-  #     - uses: ncipollo/release-action@v1
-  #       with:
-  #         name: ${{ env.EXT_VERSION }}
-  #         tag: ${{ env.EXT_VERSION }}
-  #         artifacts: ./build/release-${{ env.EXT_VERSION }}.zip
-  #         generateReleaseNotes: true
-  #         token: ${{ secrets.GITHUB_TOKEN }}
+      - uses: ncipollo/release-action@v1
+        with:
+          name: ${{ env.EXT_VERSION }}
+          tag: ${{ env.EXT_VERSION }}
+          artifacts: ./build/release-${{ env.EXT_VERSION }}.zip
+          generateReleaseNotes: true
+          token: ${{ secrets.GITHUB_TOKEN }}
 
-  #     - name: Tag with new version
-  #       id: create-tag
-  #       run: |
-  #         git tag ${{ env.EXT_VERSION }}
-  #         git push --tags
+      - name: Tag with new version
+        id: create-tag
+        run: |
+          git tag ${{ env.EXT_VERSION }}
+          git push --tags
 
   allow-version:
     name: Add allowed version to server
     needs:
       - generate-version
-      # - create-zip
+      - create-zip
     env:
       EXT_VERSION_NUM: ${{ needs.generate-version.outputs.ext-version-num }}
       VERSIONS_FILE: '/var/www/mh-hunt-helper/src/versions.txt'
@@ -142,53 +142,53 @@ jobs:
           ssh do 'grep -qxF "${{ env.EXT_VERSION_NUM }}" ${{ ENV.VERSIONS_FILE }} || echo "${{ env.EXT_VERSION_NUM }}" >> ${{ ENV.VERSIONS_FILE }}'
 
 
-  # chrome-submit:
-  #   name: Submit to Chrome
-  #   needs:
-  #     - generate-version
-  #     - create-zip
-  #   env:
-  #     EXT_VERSION: ${{ needs.generate-version.outputs.ext-version }}
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/download-artifact@v3
-  #       name: Get extension artifact
-  #       with:
-  #         name: release-${{ env.EXT_VERSION }}
-  #         path: ./dist
+  chrome-submit:
+    name: Submit to Chrome
+    needs:
+      - generate-version
+      - create-zip
+    env:
+      EXT_VERSION: ${{ needs.generate-version.outputs.ext-version }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/download-artifact@v3
+        name: Get extension artifact
+        with:
+          name: release-${{ env.EXT_VERSION }}
+          path: ./dist
 
-  #     - name: Create chrome artifact
-  #       run: |
-  #         mkdir build
-  #         zip -r chrome-extension.zip ./dist/*
+      - name: Create chrome artifact
+        run: |
+          mkdir build
+          zip -r chrome-extension.zip ./dist/*
 
-  #     - name: Upload new release zip to Chrome Webstore
-  #       uses: Klemensas/chrome-extension-upload-action@1df3cdf4047a4789bc61a64a125994d8caf23572
-  #       with:
-  #         refresh-token: ${{ secrets.CHROME_WEBSTORE_REFRESH_TOKEN }}
-  #         client-id: ${{ secrets.CHROME_WEBSTORE_CLIENT_ID }}
-  #         client-secret: ${{ secrets.CHROME_WEBSTORE_CLIENT_SECRET }}
-  #         file-name: chrome-extension.zip
-  #         app-id: ${{ secrets.CHROME_WEBSTORE_ADDON_ID }}
-  #         publish: true
+      - name: Upload new release zip to Chrome Webstore
+        uses: Klemensas/chrome-extension-upload-action@1df3cdf4047a4789bc61a64a125994d8caf23572
+        with:
+          refresh-token: ${{ secrets.CHROME_WEBSTORE_REFRESH_TOKEN }}
+          client-id: ${{ secrets.CHROME_WEBSTORE_CLIENT_ID }}
+          client-secret: ${{ secrets.CHROME_WEBSTORE_CLIENT_SECRET }}
+          file-name: chrome-extension.zip
+          app-id: ${{ secrets.CHROME_WEBSTORE_ADDON_ID }}
+          publish: true
 
-  # firefox-submit:
-  #   name: Submit to Firefox
-  #   needs:
-  #     - generate-version
-  #     - create-zip
-  #   env:
-  #     EXT_VERSION: ${{ needs.generate-version.outputs.ext-version }}
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/download-artifact@v3
-  #       name: Get extension artifact
-  #       with:
-  #         name: release-${{ env.EXT_VERSION }}
-  #         path: ./dist
+  firefox-submit:
+    name: Submit to Firefox
+    needs:
+      - generate-version
+      - create-zip
+    env:
+      EXT_VERSION: ${{ needs.generate-version.outputs.ext-version }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/download-artifact@v3
+        name: Get extension artifact
+        with:
+          name: release-${{ env.EXT_VERSION }}
+          path: ./dist
 
-  #     - name: Display structure of downloaded files
-  #       run: ls -R
+      - name: Display structure of downloaded files
+        run: ls -R
 
-  #     - name: Upload new release to Firefox Webstore
-  #       run: npx -y web-ext sign --use-submission-api --channel=listed --source-dir=./dist/ --verbose --api-key ${{ secrets.FIREFOX_WEBSTORE_API_KEY }} --api-secret ${{ secrets.FIREFOX_WEBSTORE_API_SECRET }}
+      - name: Upload new release to Firefox Webstore
+        run: npx -y web-ext sign --use-submission-api --channel=listed --source-dir=./dist/ --verbose --api-key ${{ secrets.FIREFOX_WEBSTORE_API_KEY }} --api-secret ${{ secrets.FIREFOX_WEBSTORE_API_SECRET }}
