--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,8 +9,8 @@ updates:
     directory: "/" # Location of package manifests
     schedule:
       interval: "weekly"
-    reviewers: 
-      - "DevJackSmith"
-      - "AardWolf"
-      - "tehhowch"
     versioning-strategy: increase
+    groups:
+      dev-dependencies:
+        patterns:
+          - "*"
