Added verbose flag

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
       - name: "web-ext lint"
         run: |
           cd src
-          npm exec web-ext lint
+          npm exec web-ext lint --verbose
 
   lint:
     runs-on: ubuntu-latest
