--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "got-cjs": "^12.5.4",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "mergician": "^2.0.0",
     "ts-jest": "^29.1.2",
     "ts-loader": "^9.5.1",
     "tsconfig-paths-webpack-plugin": "^4.1.0",
